--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Poiret+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --text: white;
+  --textSoft: ;
+  --btn: #e74c3c;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scrollbar-width: none;
+  font-family: "Poiret One", serif;
+  font-style: normal;
+
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+
+.container {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+
 }
 
 a {
-  color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+  color: inherit;
 }
