--- a/src/Components/MiddleSection/Middlesection.module.css
+++ b/src/Components/MiddleSection/Middlesection.module.css
@@ -1,4 +1,8 @@
 .containter {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100vh;
+    padding: 0 10px;
 }
