--- a/src/Components/DeviceTable/DeviceTable.module.css
+++ b/src/Components/DeviceTable/DeviceTable.module.css
@@ -2,9 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
+    max-height: 400px;
+    overflow-y: scroll;
     border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     margin-bottom: 10px;
+    padding: 1rem;
 }
