--- a/src/Components/Charts/Chart.module.css
+++ b/src/Components/Charts/Chart.module.css
@@ -31,7 +31,7 @@
     align-items: center;
     width: 95%;
     height: 95%;
-    background-color: lightcoral;
+    background-color: rgb(120, 183, 194);
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
