--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,11 +1,12 @@
 .container {
-    background-color: #206957;
+    background-color: #000000;
     height: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
     position: relative;
+    color: white;
 }
 
 .logo {
