--- a/src/app/devices/[id]/page.module.css
+++ b/src/app/devices/[id]/page.module.css
@@ -1,5 +1,6 @@
 .containter {
     display: flex;
+    flex-direction: column;
     padding: 20px;
     margin-top: 10px;
     margin-left: 5px;
@@ -9,6 +10,7 @@
 }
 
 .table {
+    flex: 1;
     width: 100%;
 }
 
