--- a/src/Components/StatuCards/Status.module.css
+++ b/src/Components/StatuCards/Status.module.css
@@ -16,7 +16,9 @@
     border-radius: 1rem;
     box-shadow: 0 4px 12px rgba(255, 255, 255, 0.07);
     padding: 1rem;
+    cursor: pointer;
 }
+
 
 .icon {
     width: 32px;
